Fix table headings and show all fields

--- a/hello_world_pets_website/templates/vets.html
+++ b/hello_world_pets_website/templates/vets.html
@@ -128,10 +128,11 @@
 		<thead>
 			<tr>
 				<th scope="col">#</th>
-				<th scope="col">Vet Name</th>
-				<th scope="col">Specialty</th>
-				<th scope="col">Phone</th>
+				<th scope="col">First Name</th>
+				<th scope="col">Last Name</th>
 				<th scope="col">E-mail</th>
+				<th scope="col">Phone</th>
+				<th scope="col">Specialty</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -142,6 +143,7 @@
             <td>{{r[2]}}</td>
             <td>{{r[3]}}</td>
             <td>{{r[4]}}</td>
+            <td>{{r[5]}}</td>
           </tr>
         {% endfor %}
 		</tbody>
