--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -352,10 +352,14 @@
 				<td>{{e[1]}}</td>
 				<td>{{e[2]}}</td>
 				<td>
-					<button class="btn btn-info">Update</button>
+					<form action="" method="post">
+					<button class="btn btn-info" name='enroll-update' value='{{e[0]}}'>Update</button>
+					</form>
 				</td>
 				<td>
-					<button class="btn btn-danger">Delete</button>
+					<form action="" method="post">
+					<button class="btn btn-danger" name='enroll-delete' value='{{e[0]}}'>Delete</button>
+					</form>
 				</td>
 			</tr>
 			{% endfor %}
@@ -367,19 +371,34 @@
 				<!-- We need to add a form attribute in order to add new enrollments to the DB. We are 
 				also using JQUERY to make the Enroll Pet button reactive-->
 				<!--<td colspan="11">-->
-					<form>
+					<form action="", method="post">
 						<!-- ADD IN ROW FOR HIDDEN ID!!!-->
-						<td><input type="number" id="enroll_id" hidden></td>
-						<td><input type="number" id="pet_id" placeholder="Pet ID"></td>
-						<td><input type="number" id="class_id" placeholder="Class ID"></td>
+						<td><input type="number" name="enroll_id" hidden></td>
+						<td><input type="number" name="pet_id" placeholder="Pet ID"></td>
+						<td><input type="number" name="class_id" placeholder="Class ID"></td>
+						<td><button id="enrollButton" class="btn btn-secondary" name='enroll-insert' value="0">Enroll Pet</button></td>
 					</form>
-					<td><button id="enrollButton" class="btn btn-secondary">Enroll Pet</button></td>
 				<!--</td>-->
 			</tr>
 
 		</tbody>
 	</table>
+	{% if feedback is defined and feedback|length %}
+    <div>
+        <p class="text-center">
+        {{feedback["Enrollments"]}}
+        </p>
+    </div>
+    {% endif %}
 </div>
+
+{% if enroll_admin_result is defined %}
+<div>
+	<p class="text-center">
+        {{enroll_admin_result}}
+    </p>
+</div>
+{% endif %}
 {% endif %}
 
 <!-- Table for Vets -->
