Fixed styling of classes table on admin page

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -246,7 +246,7 @@
 
   <!-- Table for Classes -->
   {% if classes is defined and classes|length %}
-  <div class="contianer" style="width:90%">
+  <div class="contianer" style="width:100%">
 	<h5 class="card-title">Classes</h5>
 	<table id="classTable" class="table table-striped" style="width:100%">
 		<thead>
@@ -281,7 +281,7 @@
 			</td>
 			<td>
 				<form action="" method="post">
-					<button class="btn btn-info" name="class-delete" value="{{c[0]}}">Delete</button>
+					<button class="btn btn-danger" name="class-delete" value="{{c[0]}}">Delete</button>
 				</form>			
 			</td>
 		</tr>
@@ -295,14 +295,14 @@
 				also using JQUERY to make the Add Class button reactive-->
 				<!--<td colspan="11">-->
 					<form action="" method="post">
-						<td><input type="number" name="class_id" hidden></td>
-						<td><input type="text" name="class_name" placeholder="Class Name"></td>
-						<td><input type="text" name="class_description" placeholder="Class Description"></td>
-						<td><input type="date" name="class_day" placeholder="Day"></td>
-						<td><input type="datetime-local" name="class_time" placehoder="Time"></td>
-						<td><input type="number" name="class_price" value="Price"></td>
-						<td><input type="number" name="class_enrollments" value="Class Enrollments"></td>
-						<td><input type="number" name="class_seats" value="Class Seats"></td>
+						<td><input style="width:4px" type="number" name="class_id" hidden></td>
+						<td><input style="width:180px" type="text" name="class_name" placeholder="Class Name"></td>
+						<td><input style="width:300px" type="text" name="class_description" placeholder="Class Description"></td>
+						<td><input style="width:180px" type="date" name="class_day" placeholder="Day"></td>
+						<td><input style="width:180px" type="datetime-local" name="class_time" placehoder="Time"></td>
+						<td><input style="width:50px" type="number" name="class_price" value="Price"></td>
+						<td><input style="width:50px" type="number" name="class_enrollments" value="Class Enrollments"></td>
+						<td><input style="width:50px" type="number" name="class_seats" value="Class Seats"></td>
 						<td><button id="classButton" class="btn btn-secondary" name="class-insert" value="0">Add Class</button></td>					
 					</form>
 				<!--</td>-->
