--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -210,14 +210,16 @@
 						<td><input style="width:100px" type="text" name="pet_name" placeholder="Pet Name"></td>
 						<td><input style="width:100px" type="text" name="pet_species" placeholder="Species"></td>
 						<td><input style="width:200px" type="text" name="pet_breed" placeholder="Breed"></td>
-						<td><input type="text" name="pet_age" placehoder="Age"></td>
+						<td><input style="width:50px" type="number" name="pet_age" placehoder="Age"></td>
 						<td><input type="radio" name ="pet_gender" id="pet_gender1" value="1">
 							<label for="pet_gender1">Female</label>
 							<br>
 							<input type="radio" name="pet_gender" id="pet_gender2" value="2">
 							<label for="pet_gender2">Male</label></td>
-						<td><input style="width:70px" type="number" name="vet_id" placeholder="Vet ID"></td>
-						<td><input style="width:70px" type="number" name="customer_id" placeholder="Customer ID"></td>
+						<td><input style="width:180px" type="text" name="customer_first_name" placeholder="Customer First Name"></td>
+						<td><input style="width:180px" type="text" name="customer_last_name" placeholder="Customer Last Name"></td>
+						<td><input style="width:120px" type="text" name="vet_first_name" placeholder="Vet First Name"></td>
+						<td><input style="width:120px" type="text" name="vet_last_name" placeholder="Vet Last Name"></td>
 						<td><button id="petButton" class="btn btn-secondary" name="pet-insert" value="0">Add Pet</button></td>					
 					</form>
 				<!--</td>-->
