Updated INSERT into Enrollments table on Admin page so that we are not inserting FKs

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -373,8 +373,8 @@
 				<!--<td colspan="11">-->
 					<form action="" method="post">
 						<td><input type="number" name="enroll_id" hidden></td>
-						<td><input type="number" name="pet_id" placeholder="Pet ID"></td>
-						<td><input type="number" name="class_id" placeholder="Class ID"></td>
+						<td><input type="text" name="pet_name" placeholder="Pet Name"></td>
+						<td><input type="text" name="class_name" placeholder="Class Name"></td>
 						<td><button id="enrollButton" class="btn btn-secondary" name='enroll-insert' value="0">Enroll Pet</button></td>
 					</form>
 				<!--</td>-->
